domain UI completed and UI alignment fix

--- a/styles/Pages.module.css
+++ b/styles/Pages.module.css
@@ -30,6 +30,10 @@
   box-shadow: 2px 2px 3px #b1b7bb;
   vertical-align: middle;
   font-weight: 600;
-  height: 35px !important;
-  margin-bottom: 5px;
+  margin-bottom: 0;
+}
+
+.savebtn {
+  border: 1px solid #6ab34b !important;
+  color: #6ab34b !important;
 }
