--- a/styles/globals.css
+++ b/styles/globals.css
@@ -536,8 +536,8 @@ a {
   position: relative;
   z-index: 1;
   flex: 1 1;
-  font-weight: 700;
-  font-size: 14px;
+  font-weight: 600;
+  font-size: 13px;
 }
 
 .ant-table-thead>tr>th,
@@ -598,13 +598,56 @@ a {
 }
 
 .ant-table-tbody .ant-btn {
-  height: 25px !important;
-  padding: 4px 12px !important;
+  height: 20px !important;
+  padding: 2px 10px !important;
   font-size: 12px !important;
-  line-height: 1.0715 !important;
+  line-height: 10px !important;
 }
 
 .ant-table-thead>tr>th {
   font-size: 14px !important;
-  font-weight: 700 !important;
+  font-weight: 600 !important;
+}
+
+.ant-card-type-inner .ant-card-extra {
+  padding: 0 0 !important;
+}
+
+.ant-modal-body {
+  padding: 10px !important;
+}
+
+.ant-modal-header {
+  padding: 10px 8px !important;
+}
+
+.ant-modal-title {
+  font-size: 14px !important;
+  font-weight: 600 !important;
+}
+
+.ant-modal-close-x {
+  width: 40px !important;
+  height: 40px !important;
+  line-height: 35px !important;
+}
+
+.ant-pagination-item.ant-pagination-item-active {
+  font-weight: 500;
+  background: #0071bc !important;
+  border-color: #0071bc !important;
+  color: #fff !important;
+  box-shadow: 2px 2px 3px #7c7c7ca6 !important;
+}
+
+.ant-pagination-prev .ant-pagination-item-link,
+.ant-pagination-next .ant-pagination-item-link {
+  background-color: #fff !important;
+  border: 1px solid #ffffff !important;
+  box-shadow: 2px 2px 3px #33333370 !important;
+}
+
+.ant-pagination-item{
+    border: 1px solid #fffefe !important;
+    box-shadow: 2px 2px 3px #33333361;
 }
